--- a/examples/example3.ipynb
+++ b/examples/example3.ipynb
@@ -13,7 +13,7 @@
     "# Add repo root to Python path (one level up from examples/)\n",
     "sys.path.append(os.path.abspath(\"..\"))  \n",
     "\n",
-    "from src.parsing import generate_reactions, sample_reactions, generate_single_trajectory, save_trajectory, load_trajectory\n",
+    "from src.parsing import *\n",
     "from CRN_Simulation.CRN import CRN\n",
     "\n",
     "import numpy as np\n",
@@ -169,8 +169,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "62bd3d8c-c5a1-4c77-a9e6-a6e30fcf03ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tracking data for 54 unique stoichiometric changes\n",
+      "Processing trajectory 1 of 483\n",
+      "\tProcessing state 0 of 2\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m [col_dict, XCurrKeys, X_Counts, T_Vals, X_Propensities] \u001b[38;5;241m=\u001b[39m calc_XCurr_ChangeTimePropensitySimple(state_list, time_list, \n\u001b[1;32m      2\u001b[0m                                                                                                 reactant_matrix, stoichiometric_matrix)\n",
+      "File \u001b[0;32m~/Documents/GitHub/BayesCRNInference/src/parsing.py:375\u001b[0m, in \u001b[0;36mcalc_XCurr_ChangeTimePropensitySimple\u001b[0;34m(fullStateList, fullTimeList, reactant_matrix, stoichiometric_matrix, verbose)\u001b[0m\n\u001b[1;32m    373\u001b[0m XCurr  \u001b[38;5;241m=\u001b[39m state_list[i]\n\u001b[1;32m    374\u001b[0m deltaX \u001b[38;5;241m=\u001b[39m state_list[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m state_list[i]\n\u001b[0;32m--> 375\u001b[0m deltaT \u001b[38;5;241m=\u001b[39m time_list[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m time_list[i]\n\u001b[1;32m    377\u001b[0m deltaX_tuple \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(deltaX\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m))\n\u001b[1;32m    378\u001b[0m index \u001b[38;5;241m=\u001b[39m col_dict\u001b[38;5;241m.\u001b[39mget(deltaX_tuple, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "[col_dict, XCurrKeys, X_Counts, T_Vals, X_Propensities] = calc_XCurr_ChangeTimePropensitySimple(state_list, time_list, \n",
+    "                                                                                                reactant_matrix, stoichiometric_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "70956de2-09b3-4d81-b7ec-1b022c7bc48c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " np.float64(0.011097811874413189),\n",
+       " np.float64(0.06810330478021509),\n",
+       " np.float64(0.07480634651665741),\n",
+       " np.float64(0.10187345475689061),\n",
+       " np.float64(0.106534837828003),\n",
+       " np.float64(0.3770422556434983),\n",
+       " np.float64(0.7230034276682743),\n",
+       " np.float64(0.8811820793606082),\n",
+       " np.float64(1.2606936273142046)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_list[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "333f0958-c721-406a-a7fd-b88a54321d7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([7., 4., 8.]),\n",
+       " array([7., 3., 7.]),\n",
+       " array([7., 2., 6.]),\n",
+       " array([7., 1., 5.]),\n",
+       " array([7., 0., 4.]),\n",
+       " array([6., 0., 6.]),\n",
+       " array([5., 0., 8.]),\n",
+       " array([ 4.,  0., 10.]),\n",
+       " array([ 3.,  0., 12.]),\n",
+       " array([ 2.,  0., 14.])]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_list[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00082124-1df8-4e4a-8f88-7d628d356ab0",
    "metadata": {},
    "outputs": [],
    "source": []
