--- a/examples/example3.ipynb
+++ b/examples/example3.ipynb
@@ -177,21 +177,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Wrapped single trajectory into list of trajectories.\n",
       "Tracking data for 54 unique stoichiometric changes\n",
-      "Processing trajectory 1 of 483\n",
-      "\tProcessing state 0 of 2\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m [col_dict, XCurrKeys, X_Counts, T_Vals, X_Propensities] \u001b[38;5;241m=\u001b[39m calc_XCurr_ChangeTimePropensitySimple(state_list, time_list, \n\u001b[1;32m      2\u001b[0m                                                                                                 reactant_matrix, stoichiometric_matrix)\n",
-      "File \u001b[0;32m~/Documents/GitHub/BayesCRNInference/src/parsing.py:375\u001b[0m, in \u001b[0;36mcalc_XCurr_ChangeTimePropensitySimple\u001b[0;34m(fullStateList, fullTimeList, reactant_matrix, stoichiometric_matrix, verbose)\u001b[0m\n\u001b[1;32m    373\u001b[0m XCurr  \u001b[38;5;241m=\u001b[39m state_list[i]\n\u001b[1;32m    374\u001b[0m deltaX \u001b[38;5;241m=\u001b[39m state_list[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m state_list[i]\n\u001b[0;32m--> 375\u001b[0m deltaT \u001b[38;5;241m=\u001b[39m time_list[i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m time_list[i]\n\u001b[1;32m    377\u001b[0m deltaX_tuple \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m(deltaX\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mint\u001b[39m))\n\u001b[1;32m    378\u001b[0m index \u001b[38;5;241m=\u001b[39m col_dict\u001b[38;5;241m.\u001b[39mget(deltaX_tuple, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "Processing trajectory 1 of 1\n",
+      "\tProcessing state 0 of 482\n",
+      "Finished processing states. Computing propensities...\n",
+      "\tProcessing propensities for state 0 = (7, 4, 8)\n",
+      "Finished successfully.\n"
      ]
     }
    ],
@@ -202,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "70956de2-09b3-4d81-b7ec-1b022c7bc48c",
    "metadata": {},
    "outputs": [
@@ -221,7 +213,7 @@
        " np.float64(1.2606936273142046)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "333f0958-c721-406a-a7fd-b88a54321d7b",
    "metadata": {},
    "outputs": [
@@ -251,7 +243,7 @@
        " array([ 2.,  0., 14.])]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
