--- a/examples/example3.ipynb
+++ b/examples/example3.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "96d708a2-c19f-4966-95e6-662dc5b10d88",
    "metadata": {},
    "outputs": [
@@ -36,6 +36,9 @@
     }
    ],
    "source": [
+    "# Potentially make something that would generate all the complexes and such.\n",
+    "# Could generalize more.\n",
+    "\n",
     "# Define species names\n",
     "species_names = [\"X\", \"Y\", \"Z\"]\n",
     "\n",
