--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -69,8 +69,8 @@
     "# Set up Reaction System 1 #\n",
     "############################\n",
     "\n",
-    "reactions_sys1 = [\"X1_to_X2\", \"X2_to_X1\"]\n",
-    "rates_sys1 = [1.0, 1.0]  # X1_to_X2, X2_to_X1\n",
+    "reactions_sys1 = [\"X1_to_X2\", \"X2_to_X1\"] # X1 -> X2; X2 -> X1\n",
+    "rates_sys1     = [1.0, 1.0]  # X1_to_X2, X2_to_X1\n",
     "\n",
     "\n",
     "############################\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "7664247f-3255-4bbc-9485-a55b0807c02f",
    "metadata": {},
    "outputs": [
@@ -93,6 +93,7 @@
       "CRN1 created.\n",
       "Reaction indices: [16, 7]\n",
       "Parameter values: {'k16': 1.0, 'k7': 1.0}\n",
+      "***********\n",
       "CRN2 created.\n",
       "Reaction indices: [29, 24, 22, 13]\n",
       "Parameter values: {'k29': 1.0, 'k24': 1.0, 'k22': 1.0, 'k13': 2}\n"
@@ -130,7 +131,7 @@
     "print(\"CRN1 created.\")\n",
     "print(\"Reaction indices:\", CRN1_indices)\n",
     "print(\"Parameter values:\", CRN1_parameter_values)\n",
-    "\n",
+    "print(\"***********\")\n",
     "\n",
     "############################\n",
     "# Generate CRN System 2\n",
@@ -245,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "62bd3d8c-c5a1-4c77-a9e6-a6e30fcf03ba",
    "metadata": {},
    "outputs": [
@@ -274,7 +275,7 @@
    ],
    "source": [
     "# Parse trajectory for CRN1\n",
-    "[col_dict1, XCurrKeys1, X_Counts1, T_Vals1, X_Propensities1] = \\\n",
+    "[uniqueStoch1, uniqueStates1, jumpCounts1, waitingTimes1, propensities1] = \\\n",
     "    calc_XCurr_ChangeTimePropensitySimple(\n",
     "        state_list1,\n",
     "        time_list1,\n",
@@ -283,7 +284,7 @@
     "    )\n",
     "\n",
     "# Parse trajectory for CRN2\n",
-    "[col_dict2, XCurrKeys2, X_Counts2, T_Vals2, X_Propensities2] = \\\n",
+    "[uniqueStoch2, uniqueStates2, jumpCounts2, waitingTimes2, propensities2] = \\\n",
     "    calc_XCurr_ChangeTimePropensitySimple(\n",
     "        state_list2,\n",
     "        time_list2,\n",
@@ -292,29 +293,83 @@
     "    )\n",
     "\n",
     "# Print some basic info to check\n",
-    "print(f\"CRN1: {len(XCurrKeys1)} unique states observed\")\n",
-    "print(f\"CRN2: {len(XCurrKeys2)} unique states observed\")\n"
+    "print(f\"CRN1: {len(uniqueStates1)} unique states observed\")\n",
+    "print(f\"CRN2: {len(uniqueStates2)} unique states observed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "70956de2-09b3-4d81-b7ec-1b022c7bc48c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 1), (2, 0), (0, 2)]"
+       "defaultdict(<function src.parsing.calc_XCurr_ChangeTimePropensitySimple.<locals>.<lambda>()>,\n",
+       "            {(1, 1): [array([0.]),\n",
+       "              array([0.]),\n",
+       "              array([0.]),\n",
+       "              array([1.]),\n",
+       "              array([1., 1., 0.]),\n",
+       "              array([1., 1., 0.]),\n",
+       "              array([1.]),\n",
+       "              array([0.]),\n",
+       "              array([1., 0., 1.]),\n",
+       "              array([1., 1., 1.]),\n",
+       "              array([1.]),\n",
+       "              array([0.]),\n",
+       "              array([1., 0., 1.]),\n",
+       "              array([1., 1., 1.]),\n",
+       "              array([1.]),\n",
+       "              array([0.]),\n",
+       "              array([1.]),\n",
+       "              array([1.])],\n",
+       "             (2, 0): [array([1.]),\n",
+       "              array([1.]),\n",
+       "              array([1.]),\n",
+       "              array([0.]),\n",
+       "              array([2., 0., 1.]),\n",
+       "              array([2., 0., 1.]),\n",
+       "              array([2.]),\n",
+       "              array([0.]),\n",
+       "              array([0., 0., 0.]),\n",
+       "              array([1., 0., 2.]),\n",
+       "              array([1.]),\n",
+       "              array([0.]),\n",
+       "              array([0., 0., 0.]),\n",
+       "              array([1., 0., 2.]),\n",
+       "              array([1.]),\n",
+       "              array([0.]),\n",
+       "              array([0.]),\n",
+       "              array([1.])],\n",
+       "             (0, 2): [array([0.]),\n",
+       "              array([0.]),\n",
+       "              array([0.]),\n",
+       "              array([0.]),\n",
+       "              array([0., 0., 0.]),\n",
+       "              array([0., 0., 0.]),\n",
+       "              array([0.]),\n",
+       "              array([1.]),\n",
+       "              array([2., 1., 0.]),\n",
+       "              array([1., 2., 0.]),\n",
+       "              array([1.]),\n",
+       "              array([1.]),\n",
+       "              array([2., 1., 0.]),\n",
+       "              array([1., 2., 0.]),\n",
+       "              array([1.]),\n",
+       "              array([1.]),\n",
+       "              array([2.]),\n",
+       "              array([1.])]})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "XCurrKeys1"
+    "propensities1"
    ]
   },
   {
@@ -326,7 +381,16 @@
     {
      "data": {
       "text/plain": [
-       "[(1, 1), (0, 2), (2, 0)]"
+       "defaultdict(<function src.parsing.calc_XCurr_ChangeTimePropensitySimple.<locals>.<lambda>()>,\n",
+       "            {(1,\n",
+       "              1): array([ 0,  0,  0,  0,  0, 90,  0,  0,  0,  0,  0,  0, 92,  0,  0,  0,  0,\n",
+       "                     0]),\n",
+       "             (2,\n",
+       "              0): array([ 0,  0,  0,  0,  0, 92,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+       "                     0]),\n",
+       "             (0,\n",
+       "              2): array([ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, 90,  0,  0,  0,  0,\n",
+       "                     0])})"
       ]
      },
      "execution_count": 8,
@@ -335,13 +399,51 @@
     }
    ],
    "source": [
-    "XCurrKeys2"
+    "X_Counts1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "00082124-1df8-4e4a-8f88-7d628d356ab0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(np.float64(-2.0), np.float64(0.0)): 0,\n",
+       " (np.float64(-2.0), np.float64(1.0)): 1,\n",
+       " (np.float64(-2.0), np.float64(2.0)): 2,\n",
+       " (np.float64(-1.0), np.float64(-1.0)): 3,\n",
+       " (np.float64(-1.0), np.float64(0.0)): 4,\n",
+       " (np.float64(-1.0), np.float64(1.0)): 5,\n",
+       " (np.float64(-1.0), np.float64(2.0)): 6,\n",
+       " (np.float64(0.0), np.float64(-2.0)): 7,\n",
+       " (np.float64(0.0), np.float64(-1.0)): 8,\n",
+       " (np.float64(0.0), np.float64(1.0)): 9,\n",
+       " (np.float64(0.0), np.float64(2.0)): 10,\n",
+       " (np.float64(1.0), np.float64(-2.0)): 11,\n",
+       " (np.float64(1.0), np.float64(-1.0)): 12,\n",
+       " (np.float64(1.0), np.float64(0.0)): 13,\n",
+       " (np.float64(1.0), np.float64(1.0)): 14,\n",
+       " (np.float64(2.0), np.float64(-2.0)): 15,\n",
+       " (np.float64(2.0), np.float64(-1.0)): 16,\n",
+       " (np.float64(2.0), np.float64(0.0)): 17}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_dict1 # 2 X1 -> Empty ; "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00082124-1df8-4e4a-8f88-7d628d356ab0",
+   "id": "f6877aa3-062f-431d-b3f5-1159bea08cc5",
    "metadata": {},
    "outputs": [],
    "source": []
