Updating the Trajectory Parsing to be smother
Updated all examples to use the correct parsing code.

Unified the compatible reactions calculation (it's only done once, when the reactions are defined)

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "e1f127a3-72a3-431c-996e-6283f2abe2d3",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "96d708a2-c19f-4966-95e6-662dc5b10d88",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,11 @@
      "output_type": "stream",
      "text": [
       "Total reactions generated: 30\n",
-      "Some reaction names: ['Empty_to_X2:', 'Empty_to_2X2:', 'Empty_to_X1:', 'Empty_to_X1+X2:', 'Empty_to_2X1:']\n"
+      "Some Reaction Names: ['Empty_to_X2:', 'Empty_to_2X2:', 'Empty_to_X1:']\n",
+      "Some Non-Unique Stoichiometric Changes\n",
+      "ΔX = (0, 1) → indices: [0, 6, 18], reactions: ['Empty_to_X2:', 'X2_to_2X2:', 'X1_to_X1+X2:']\n",
+      "ΔX = (1, 0) → indices: [2, 8, 19], reactions: ['Empty_to_X1:', 'X2_to_X1+X2:', 'X1_to_2X1:']\n",
+      "ΔX = (0, -1) → indices: [5, 11, 23], reactions: ['X2_to_Empty:', '2X2_to_X2:', 'X1+X2_to_X1:']\n"
      ]
     }
    ],
@@ -105,14 +109,30 @@
     "complexes = np.array([[0, 0, 0, 1, 1, 2],\n",
     "                      [0, 1, 2, 0, 1, 0]])\n",
     "\n",
-    "reactant_matrix, product_matrix, stoichiometric_matrix, reaction_names, parameter_names = generate_reactions(complexes, species_names)\n",
+    "# Create Reactant, Product, Stochiometric Matrix, Define Compatible Reactions and Everything Needed for CRN\n",
+    "reactant_matrix, product_matrix, stoichiometric_matrix, reaction_names, parameter_names, compatible_reactions = generate_reactions(complexes, species_names)\n",
+    "\n",
+    "# Plot some output to the screen\n",
     "print(f\"Total reactions generated: {len(reaction_names)}\")\n",
-    "print(\"Some reaction names:\", reaction_names[:5])"
+    "max_show = 3\n",
+    "print(\"Some Reaction Names:\", reaction_names[:max_show])\n",
+    "\n",
+    "print(\"Some Non-Unique Stoichiometric Changes\")\n",
+    "count_shown = 0\n",
+    "for deltaX, rxn_indices in compatible_reactions.items():\n",
+    "    if len(rxn_indices) > 1:\n",
+    "        deltaX_clean = tuple(int(x) for x in deltaX)\n",
+    "        # Grab all reaction names\n",
+    "        rxn_names = [reaction_names[i] for i in rxn_indices]\n",
+    "        print(f\"ΔX = {deltaX_clean} → indices: {rxn_indices}, reactions: {rxn_names}\")\n",
+    "        count_shown += 1\n",
+    "        if count_shown >= max_show:\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "b91bb93a-c715-4c14-a7e1-c39971c58ce6",
    "metadata": {},
    "outputs": [],
@@ -120,7 +140,6 @@
     "############################\n",
     "# Set up Reaction System 1 #\n",
     "############################\n",
-    "\n",
     "reactions_sys1 = [\"X1_to_X2\", \"X2_to_X1\"] # X1->X2; X2->X1\n",
     "rates_sys1     = [1, 1]                   # X1->X2; X2->X1\n",
     "\n",
@@ -129,12 +148,12 @@
     "# Set up Reaction System 2 #\n",
     "############################\n",
     "reactions_sys2 = [\"2X1_to_X1+X2\", \"X1+X2_to_2X1\",\"X1+X2_to_2X2\",\"2X2_to_X1+X2\"] # 2X1->X1+X2; X1+X2->2X1; X1+X2->2X2; 2X2->X1+X2\n",
-    "rates_sys2     = [2, 1, 1, 2] # 2X1->X1+X2; X1+X2->2X1; X1+X2->2X2; 2X2->X1+X2 \n"
+    "rates_sys2     = [2, 1, 1, 2] # 2X1->X1+X2; X1+X2->2X1; X1+X2->2X2; 2X2->X1+X2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "7664247f-3255-4bbc-9485-a55b0807c02f",
    "metadata": {},
    "outputs": [
@@ -214,12 +233,12 @@
     "\n",
     "print(\"CRN2 created.\")\n",
     "print(\"Reaction indices:\", CRN2_indices)\n",
-    "print(\"Parameter values:\", CRN2_parameter_values)\n"
+    "print(\"Parameter values:\", CRN2_parameter_values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "acd70c96-52ea-4265-ace9-13b7a80941c4",
    "metadata": {},
    "outputs": [
@@ -298,71 +317,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "62bd3d8c-c5a1-4c77-a9e6-a6e30fcf03ba",
+   "execution_count": 6,
+   "id": "7c24c9c9-b725-4886-8bae-08b1df04ab61",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parse trajectory for CRN1\n",
+      "Parsing trajectory for CRN1\n",
       "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking data for 18 unique stoichiometric changes\n",
+      "Tracking 18 unique stoichiometric changes across all trajectories.\n",
       "Processing trajectory 1 of 1\n",
-      "\tProcessing state 0 of 365\n",
-      "Finished processing states. Computing propensities...\n",
-      "\tProcessing propensities for state 0 = (1, 1)\n",
-      "Finished successfully.\n",
+      "Finished parsing trajectories.\n",
       "---------\n",
-      "Parse trajectory for CRN2\n",
+      "Parsing trajectory for CRN2\n",
       "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking data for 18 unique stoichiometric changes\n",
+      "Tracking 18 unique stoichiometric changes across all trajectories.\n",
       "Processing trajectory 1 of 1\n",
-      "\tProcessing state 0 of 365\n",
-      "Finished processing states. Computing propensities...\n",
-      "\tProcessing propensities for state 0 = (1, 1)\n",
-      "Finished successfully.\n",
+      "Finished parsing trajectories.\n",
       "---------\n",
-      "Finished Parsing Printing Summary\n",
+      "Finished parsing trajectories. Summary:\n",
       "CRN1: 3 unique states observed\n",
       "CRN2: 3 unique states observed\n"
      ]
     }
    ],
    "source": [
-    "# Parse trajectory for CRN1\n",
-    "print(f\"Parse trajectory for CRN1\")\n",
-    "[uniqueStoch1, uniqueStates1, jumpCounts1, waitingTimes1, propensities1] = \\\n",
-    "    calc_XCurr_ChangeTimePropensitySimple(\n",
-    "        state_list1,\n",
-    "        time_list1,\n",
-    "        reactant_matrix,\n",
-    "        stoichiometric_matrix\n",
-    "    )\n",
-    "print(f\"---------\")\n",
+    "# Parse trajectories for CRN1\n",
+    "print(\"Parsing trajectory for CRN1\")\n",
+    "unique_changes1, unique_states1, jump_counts1, waiting_times1, propensities1 = parse_trajectories(\n",
+    "    fullStateList=state_list1,\n",
+    "    fullTimeList=time_list1,\n",
+    "    reactant_matrix=reactant_matrix,\n",
+    "    compatible_reactions=compatible_reactions,\n",
+    "    verbose=True\n",
+    ")\n",
+    "print(\"---------\")\n",
     "\n",
-    "# Parse trajectory for CRN2\n",
-    "print(f\"Parse trajectory for CRN2\")\n",
-    "[uniqueStoch2, uniqueStates2, jumpCounts2, waitingTimes2, propensities2] = \\\n",
-    "    calc_XCurr_ChangeTimePropensitySimple(\n",
-    "        state_list2,\n",
-    "        time_list2,\n",
-    "        reactant_matrix,\n",
-    "        stoichiometric_matrix\n",
-    "    )\n",
-    "print(f\"---------\")\n",
+    "# Parse trajectories for CRN2\n",
+    "print(\"Parsing trajectory for CRN2\")\n",
+    "unique_changes2, unique_states2, jump_counts2, waiting_times2, propensities2 = parse_trajectories(\n",
+    "    fullStateList=state_list2,\n",
+    "    fullTimeList=time_list2,\n",
+    "    reactant_matrix=reactant_matrix,\n",
+    "    compatible_reactions=compatible_reactions,\n",
+    "    verbose=True\n",
+    ")\n",
+    "print(\"---------\")\n",
     "\n",
-    "# Print some basic info to check\n",
-    "print(f\"Finished Parsing Printing Summary\")\n",
-    "print(f\"CRN1: {len(uniqueStates1)} unique states observed\")\n",
-    "print(f\"CRN2: {len(uniqueStates2)} unique states observed\")"
+    "# Print basic summary\n",
+    "print(\"Finished parsing trajectories. Summary:\")\n",
+    "print(f\"CRN1: {len(unique_states1)} unique states observed\")\n",
+    "print(f\"CRN2: {len(unique_states2)} unique states observed\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f6877aa3-062f-431d-b3f5-1159bea08cc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(unique_changes1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ed92fcc6-cf25-4750-89c2-ae8e8691d84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 1), (2, 0), (0, 2)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_states1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2ce81e57-c6b2-4e2d-80d7-faa076243c59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(jump_counts1[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3329637d-4991-4a08-9de0-7768c9623e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(waiting_times1[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "21854ade-5378-4851-b16f-f29510ed1dcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(propensities1[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ab741e73-cb4b-41c3-a59b-caca8d0b99dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(np.int64(0), np.int64(1)),\n",
+       " (np.int64(0), np.int64(2)),\n",
+       " (np.int64(1), np.int64(0)),\n",
+       " (np.int64(1), np.int64(1)),\n",
+       " (np.int64(2), np.int64(0)),\n",
+       " (np.int64(0), np.int64(-1)),\n",
+       " (np.int64(1), np.int64(-1)),\n",
+       " (np.int64(2), np.int64(-1)),\n",
+       " (np.int64(0), np.int64(-2)),\n",
+       " (np.int64(1), np.int64(-2)),\n",
+       " (np.int64(2), np.int64(-2)),\n",
+       " (np.int64(-1), np.int64(0)),\n",
+       " (np.int64(-1), np.int64(1)),\n",
+       " (np.int64(-1), np.int64(2)),\n",
+       " (np.int64(-1), np.int64(-1)),\n",
+       " (np.int64(-2), np.int64(0)),\n",
+       " (np.int64(-2), np.int64(1)),\n",
+       " (np.int64(-2), np.int64(2))]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_changes1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6877aa3-062f-431d-b3f5-1159bea08cc5",
+   "id": "c8a07685-b53c-4cd0-a0ad-2b65045f8858",
    "metadata": {},
    "outputs": [],
    "source": []
