--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -76,6 +76,7 @@
     "sys.path.append(os.path.abspath(\"..\"))  \n",
     "\n",
     "from src.parsing import *\n",
+    "from src.inference import *\n",
     "from CRN_Simulation.CRN import CRN\n",
     "\n",
     "import numpy as np\n",
@@ -317,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "7c24c9c9-b725-4886-8bae-08b1df04ab61",
    "metadata": {},
    "outputs": [
@@ -326,16 +327,14 @@
      "output_type": "stream",
      "text": [
       "Parsing trajectory for CRN1\n",
-      "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking 18 unique stoichiometric changes across all trajectories.\n",
-      "Processing trajectory 1 of 1\n",
-      "Finished parsing trajectories.\n",
+      "Tracking 18 unique stoichiometric changes (single trajectory).\n",
+      "Trajectory length: 366 timepoints.  Will iterate to len-2 to avoid final non-jump.\n",
+      "Finished parsing single trajectory. Observed 3 unique states.\n",
       "---------\n",
       "Parsing trajectory for CRN2\n",
-      "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking 18 unique stoichiometric changes across all trajectories.\n",
-      "Processing trajectory 1 of 1\n",
-      "Finished parsing trajectories.\n",
+      "Tracking 18 unique stoichiometric changes (single trajectory).\n",
+      "Trajectory length: 366 timepoints.  Will iterate to len-2 to avoid final non-jump.\n",
+      "Finished parsing single trajectory. Observed 3 unique states.\n",
       "---------\n",
       "Finished parsing trajectories. Summary:\n",
       "CRN1: 3 unique states observed\n",
@@ -346,24 +345,14 @@
    "source": [
     "# Parse trajectories for CRN1\n",
     "print(\"Parsing trajectory for CRN1\")\n",
-    "unique_changes1, unique_states1, jump_counts1, waiting_times1, propensities1 = parse_trajectories(\n",
-    "    fullStateList=state_list1,\n",
-    "    fullTimeList=time_list1,\n",
-    "    reactant_matrix=reactant_matrix,\n",
-    "    compatible_reactions=compatible_reactions,\n",
-    "    verbose=True\n",
-    ")\n",
+    "unique_changes1, unique_states1, jump_counts1, waiting_times1, propensities1 = parse_trajectory(\n",
+    "    state_list1,time_list1,reactant_matrix,compatible_reactions,verbose=True)\n",
     "print(\"---------\")\n",
     "\n",
     "# Parse trajectories for CRN2\n",
     "print(\"Parsing trajectory for CRN2\")\n",
-    "unique_changes2, unique_states2, jump_counts2, waiting_times2, propensities2 = parse_trajectories(\n",
-    "    fullStateList=state_list2,\n",
-    "    fullTimeList=time_list2,\n",
-    "    reactant_matrix=reactant_matrix,\n",
-    "    compatible_reactions=compatible_reactions,\n",
-    "    verbose=True\n",
-    ")\n",
+    "unique_changes2, unique_states2, jump_counts2, waiting_times2, propensities2 = parse_trajectory(\n",
+    "    state_list2, time_list2, reactant_matrix, compatible_reactions, verbose=True)\n",
     "print(\"---------\")\n",
     "\n",
     "# Print basic summary\n",
@@ -374,151 +363,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "f6877aa3-062f-431d-b3f5-1159bea08cc5",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jump counts keys: dict_keys([(1, 1), (2, 0), (0, 2)])\n",
+      "Waiting times keys: dict_keys([(1, 1), (2, 0), (0, 2)])\n",
+      "Propensities keys: dict_keys([(1, 1), (2, 0), (0, 2)])\n"
+     ]
     }
    ],
    "source": [
-    "len(unique_changes1)"
+    "print(\"Jump counts keys:\", jump_counts1.keys())\n",
+    "print(\"Waiting times keys:\", waiting_times1.keys())\n",
+    "print(\"Propensities keys:\", propensities1.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "ed92fcc6-cf25-4750-89c2-ae8e8691d84f",
+   "execution_count": 14,
+   "id": "c8a07685-b53c-4cd0-a0ad-2b65045f8858",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(1, 1), (2, 0), (0, 2)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting local data for stoichiometric change [1, -1] at index 6\n",
+      "\n",
+      "Sanity check: propensity lengths for each state:\n",
+      "State (1, 1): propensity length = 3\n",
+      "State (2, 0): propensity length = 3\n",
+      "State (0, 2): propensity length = 3\n",
+      "\n",
+      "Local data extraction complete. 3 states processed.\n"
+     ]
     }
    ],
+   "source": [
+    "indexToCheck = 6\n",
+    "deltaXToCheck = None\n",
+    "(local_counts, local_waiting_times, local_propensities, selected_deltaX) = extract_local_data(\n",
+    "    jump_counts1, waiting_times1, propensities1, unique_changes1, index=indexToCheck, deltaX=deltaXToCheck, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9289a5de-10f2-4e97-954e-778814afc232",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "unique_states1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2ce81e57-c6b2-4e2d-80d7-faa076243c59",
+   "execution_count": null,
+   "id": "bc39dca9-eb96-47cc-827b-2445ff52f4ac",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(jump_counts1[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "3329637d-4991-4a08-9de0-7768c9623e12",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(waiting_times1[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "21854ade-5378-4851-b16f-f29510ed1dcd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(propensities1[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "ab741e73-cb4b-41c3-a59b-caca8d0b99dc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(np.int64(0), np.int64(1)),\n",
-       " (np.int64(0), np.int64(2)),\n",
-       " (np.int64(1), np.int64(0)),\n",
-       " (np.int64(1), np.int64(1)),\n",
-       " (np.int64(2), np.int64(0)),\n",
-       " (np.int64(0), np.int64(-1)),\n",
-       " (np.int64(1), np.int64(-1)),\n",
-       " (np.int64(2), np.int64(-1)),\n",
-       " (np.int64(0), np.int64(-2)),\n",
-       " (np.int64(1), np.int64(-2)),\n",
-       " (np.int64(2), np.int64(-2)),\n",
-       " (np.int64(-1), np.int64(0)),\n",
-       " (np.int64(-1), np.int64(1)),\n",
-       " (np.int64(-1), np.int64(2)),\n",
-       " (np.int64(-1), np.int64(-1)),\n",
-       " (np.int64(-2), np.int64(0)),\n",
-       " (np.int64(-2), np.int64(1)),\n",
-       " (np.int64(-2), np.int64(2))]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unique_changes1"
+    "print(jump_counts1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8a07685-b53c-4cd0-a0ad-2b65045f8858",
+   "id": "db5bd084-d381-4de0-802a-6b016f95df03",
    "metadata": {},
    "outputs": [],
    "source": []
