Updating all examples to work with new trajectory parsing

--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "acd70c96-52ea-4265-ace9-13b7a80941c4",
    "metadata": {},
    "outputs": [
@@ -313,12 +313,12 @@
     "\n",
     "trajectory_file2 = os.path.join(data_dir, \"example2_crn2_trajectory.json\")\n",
     "save_trajectory(time_list2, state_list2, filename=trajectory_file2)\n",
-    "print(f\"CRN2 trajectory saved to {trajectory_file2}\")\n"
+    "print(f\"CRN2 trajectory saved to {trajectory_file2}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "7c24c9c9-b725-4886-8bae-08b1df04ab61",
    "metadata": {},
    "outputs": [
@@ -358,12 +358,12 @@
     "# Print basic summary\n",
     "print(\"Finished parsing trajectories. Summary:\")\n",
     "print(f\"CRN1: {len(unique_states1)} unique states observed\")\n",
-    "print(f\"CRN2: {len(unique_states2)} unique states observed\")\n"
+    "print(f\"CRN2: {len(unique_states2)} unique states observed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "f6877aa3-062f-431d-b3f5-1159bea08cc5",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "c8a07685-b53c-4cd0-a0ad-2b65045f8858",
    "metadata": {},
    "outputs": [
@@ -394,12 +394,7 @@
      "output_type": "stream",
      "text": [
       "Extracting local data for stoichiometric change [1, -1] at index 6\n",
-      "\n",
-      "Sanity check: propensity lengths for each state:\n",
-      "State (1, 1): propensity length = 3\n",
-      "State (2, 0): propensity length = 3\n",
-      "State (0, 2): propensity length = 3\n",
-      "\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
       "Local data extraction complete. 3 states processed.\n"
      ]
     }
@@ -413,28 +408,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9289a5de-10f2-4e97-954e-778814afc232",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 1), (2, 0), (0, 2)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unique_states1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bc39dca9-eb96-47cc-827b-2445ff52f4ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<function parse_trajectory.<locals>.<lambda> at 0x11297a8b0>, {(1, 1): array([ 0,  0,  0,  0,  0,  0, 92,  0,  0,  0,  0,  0, 90,  0,  0,  0,  0,\n",
+      "        0]), (2, 0): array([ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0, 92,  0,  0,  0,  0,\n",
+      "        0]), (0, 2): array([ 0,  0,  0,  0,  0,  0, 90,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
+      "        0])})\n"
+     ]
+    }
+   ],
    "source": [
     "print(jump_counts1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "db5bd084-d381-4de0-802a-6b016f95df03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-267.9074409598167)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_log_likelihood(local_counts,local_waiting_times,local_propensities,[0,.1,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "51810820-49db-407e-9feb-f72ec4dce690",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 1): np.int64(92), (2, 0): np.int64(0), (0, 2): np.int64(90)}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "51ee1c17-acf7-446a-a3e9-d98c7edae36d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(1, 1): array([1., 0., 1.]),\n",
+       " (2, 0): array([0., 0., 0.]),\n",
+       " (0, 2): array([2., 1., 0.])}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_propensities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "325e86d1-e648-43fd-b64c-0ea182c8d97e",
    "metadata": {},
    "outputs": [],
    "source": []
