--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -195,10 +195,9 @@
      "output_type": "stream",
      "text": [
       "Parsing trajectory for CRN1\n",
-      "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking 18 unique stoichiometric changes across all trajectories.\n",
-      "Processing trajectory 1 of 1\n",
-      "Finished parsing trajectories.\n",
+      "Tracking 18 unique stoichiometric changes (single trajectory).\n",
+      "Trajectory length: 31 timepoints.  Will iterate to len-2 to avoid final non-jump.\n",
+      "Finished parsing single trajectory. Observed 14 unique states.\n",
       "---------\n",
       "Finished parsing trajectories. Summary:\n",
       "CRN1: 14 unique states observed\n"
@@ -208,13 +207,8 @@
    "source": [
     "# Parse trajectories for CRN1\n",
     "print(\"Parsing trajectory for CRN1\")\n",
-    "unique_changes, unique_states, jump_counts, waiting_times, propensities = parse_trajectories(\n",
-    "    state_list,\n",
-    "    time_list,\n",
-    "    reactant_matrix,\n",
-    "    compatible_reactions,\n",
-    "    verbose=True\n",
-    ")\n",
+    "unique_changes, unique_states, jump_counts, waiting_times, propensities = parse_trajectory(\n",
+    "    state_list, time_list, reactant_matrix, compatible_reactions,verbose=True)\n",
     "print(\"---------\")\n",
     "# Print basic summary\n",
     "print(\"Finished parsing trajectories. Summary:\")\n",
