--- a/examples/example3.ipynb
+++ b/examples/example3.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "acd70c96-52ea-4265-ace9-13b7a80941c4",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "696b0cd0-0446-4d6c-90f2-ab5d36fde1a9",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "62bd3d8c-c5a1-4c77-a9e6-a6e30fcf03ba",
    "metadata": {},
    "outputs": [
@@ -200,21 +200,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parsing Trajectory 1\n",
-      "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking 54 unique stoichiometric changes across all trajectories.\n",
-      "Processing trajectory 1 of 1\n",
-      "Finished parsing trajectories.\n",
-      "---------\n",
-      "Parsing Trajectory 2\n",
-      "Wrapped single trajectory into list of trajectories.\n",
-      "Tracking 54 unique stoichiometric changes across all trajectories.\n",
-      "Processing trajectory 1 of 1\n",
-      "Finished parsing trajectories.\n",
-      "---------\n",
-      "Finished parsing trajectories. Summary:\n",
-      "Trajectory 1: 631 unique states observed\n",
-      "Trajectory 2: 631 unique states observed\n"
+      "Parsing Trajectory 1\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'parse_trajectories' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Parse trajectories for CRN1\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mParsing Trajectory 1\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m unique_changes, unique_states, jump_counts, waiting_times, propensities \u001b[38;5;241m=\u001b[39m \u001b[43mparse_trajectories\u001b[49m(\n\u001b[1;32m      4\u001b[0m     state_list,time_list,reactant_matrix,compatible_reactions,verbose\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m---------\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Parse trajectories for CRN1\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'parse_trajectories' is not defined"
      ]
     }
    ],
@@ -222,23 +219,13 @@
     "# Parse trajectories for CRN1\n",
     "print(\"Parsing Trajectory 1\")\n",
     "unique_changes, unique_states, jump_counts, waiting_times, propensities = parse_trajectories(\n",
-    "    state_list,\n",
-    "    time_list,\n",
-    "    reactant_matrix,\n",
-    "    compatible_reactions,\n",
-    "    verbose=True\n",
-    ")\n",
+    "    state_list,time_list,reactant_matrix,compatible_reactions,verbose=True)\n",
     "print(\"---------\")\n",
     "\n",
     "# Parse trajectories for CRN1\n",
     "print(\"Parsing Trajectory 2\")\n",
     "unique_changes, unique_states_new, jump_counts_new, waiting_times_new, propensities_new = parse_trajectories(\n",
-    "    state_list_new,\n",
-    "    time_list_new,\n",
-    "    reactant_matrix,\n",
-    "    compatible_reactions,\n",
-    "    verbose=True\n",
-    ")\n",
+    "    state_list_new,time_list_new,reactant_matrix,compatible_reactions,verbose=True)\n",
     "print(\"---------\")\n",
     "# Print basic summary\n",
     "print(\"Finished parsing trajectories. Summary:\")\n",
@@ -248,60 +235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "70956de2-09b3-4d81-b7ec-1b022c7bc48c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0,\n",
-       " np.float64(0.011097811874413189),\n",
-       " np.float64(0.06810330478021509),\n",
-       " np.float64(0.07480634651665741),\n",
-       " np.float64(0.10187345475689061),\n",
-       " np.float64(0.106534837828003),\n",
-       " np.float64(0.3770422556434983),\n",
-       " np.float64(0.7230034276682743),\n",
-       " np.float64(0.8811820793606082),\n",
-       " np.float64(1.2606936273142046)]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_list[0:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "333f0958-c721-406a-a7fd-b88a54321d7b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([7., 4., 8.]),\n",
-       " array([7., 3., 7.]),\n",
-       " array([7., 2., 6.]),\n",
-       " array([7., 1., 5.]),\n",
-       " array([7., 0., 4.]),\n",
-       " array([6., 0., 6.]),\n",
-       " array([5., 0., 8.]),\n",
-       " array([ 4.,  0., 10.]),\n",
-       " array([ 3.,  0., 12.]),\n",
-       " array([ 2.,  0., 14.])]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "state_list[0:10]"
    ]
