--- a/examples/example2.ipynb
+++ b/examples/example2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "e1f127a3-72a3-431c-996e-6283f2abe2d3",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,7 @@
     "\n",
     "from src.parsing import *\n",
     "from src.inference import *\n",
+    "from src.mcmc import *\n",
     "from CRN_Simulation.CRN import CRN\n",
     "\n",
     "import numpy as np\n",
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7664247f-3255-4bbc-9485-a55b0807c02f",
    "metadata": {},
    "outputs": [
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "acd70c96-52ea-4265-ace9-13b7a80941c4",
    "metadata": {},
    "outputs": [
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "62bd3d8c-c5a1-4c77-a9e6-a6e30fcf03ba",
    "metadata": {},
    "outputs": [
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "70956de2-09b3-4d81-b7ec-1b022c7bc48c",
    "metadata": {},
    "outputs": [
@@ -235,6 +236,7 @@
       "Extracting local data for stoichiometric change [1, 0] at index 2\n",
       "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
       "Local data extraction complete. 132 states processed.\n",
+      "Total observed jumps for this local stoichiometric change: 277\n",
       "Local True Theta = [1. 0. 1.]\n",
       "Log-Likelihood at True Theta = 914.8116292276268\n",
       "Maximum Log-Likelihood = 926.849119029001\n",
@@ -282,78 +284,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "92c37563-8fb4-4e20-8c07-7468c72453b2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(0, 1): [0, 6, 18],\n",
-       " (0, 2): [1],\n",
-       " (1, 0): [2, 8, 19],\n",
-       " (1, 1): [3],\n",
-       " (2, 0): [4],\n",
-       " (0, -1): [5, 11, 23],\n",
-       " (1, -1): [7, 13, 24],\n",
-       " (2, -1): [9],\n",
-       " (0, -2): [10],\n",
-       " (1, -2): [12],\n",
-       " (2, -2): [14],\n",
-       " (-1, 0): [15, 21, 28],\n",
-       " (-1, 1): [16, 22, 29],\n",
-       " (-1, 2): [17],\n",
-       " (-1, -1): [20],\n",
-       " (-2, 0): [25],\n",
-       " (-2, 1): [26],\n",
-       " (-2, 2): [27]}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing Index: 0, Stoichiometric Change: (0, 1)\n",
+      "Extracting local data for stoichiometric change [0, 1] at index 0\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 0: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 1, Stoichiometric Change: (0, 2)\n",
+      "Extracting local data for stoichiometric change [0, 2] at index 1\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 1: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 2, Stoichiometric Change: (1, 0)\n",
+      "Extracting local data for stoichiometric change [1, 0] at index 2\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 132 states processed.\n",
+      "Local True Theta: [1. 0. 1.] (Norm: 1.4142)\n",
+      "True Likelihood = 914.8116292276268\n",
+      "Total Count = 277\n",
+      "Running Adaptive MCMC with spike-and-slab prior...\n",
+      "Reaction Names = ['Empty_to_X1:', 'X2_to_X1+X2:', 'X1_to_2X1:']\n",
+      "Iteration 10000: Accept Rate = 0.552, Theta = [1.98747447 0.         1.34502707]\n",
+      "Iteration 20000: Accept Rate = 0.554, Theta = [2.68463286 0.         1.39533324]\n",
+      "Iteration 30000: Accept Rate = 0.557, Theta = [0.87430073 0.         1.53164236]\n",
+      "Iteration 40000: Accept Rate = 0.558, Theta = [3.76217948 0.         1.26701088]\n",
+      "Iteration 50000: Accept Rate = 0.559, Theta = [1.83092157 0.         1.53723771]\n",
+      "Iteration 60000: Accept Rate = 0.495, Theta = [2.57794497 0.         1.1982948 ]\n",
+      "Iteration 70000: Accept Rate = 0.443, Theta = [1.11219111 0.         1.42550895]\n",
+      "Iteration 80000: Accept Rate = 0.405, Theta = [1.11895817 0.         1.26564951]\n",
+      "Iteration 90000: Accept Rate = 0.373, Theta = [0.87098125 0.         1.35592273]\n",
+      "Iteration 100000: Accept Rate = 0.348, Theta = [2.61287771 0.         1.11457347]\n",
+      "Iteration 110000: Accept Rate = 0.328, Theta = [0.74718773 0.         1.32620325]\n",
+      "Iteration 120000: Accept Rate = 0.311, Theta = [1.59512696 0.         1.29974299]\n",
+      "Iteration 130000: Accept Rate = 0.298, Theta = [0.8762753 0.        1.4731336]\n",
+      "Iteration 140000: Accept Rate = 0.285, Theta = [1.80553228 0.         1.48328737]\n",
+      "Iteration 150000: Accept Rate = 0.274, Theta = [1.99393    0.         1.25557992]\n",
+      "Iteration 160000: Accept Rate = 0.266, Theta = [0.89830062 0.         1.41803421]\n",
+      "Iteration 170000: Accept Rate = 0.258, Theta = [0.94949238 0.         1.37553417]\n",
+      "Iteration 180000: Accept Rate = 0.251, Theta = [1.42351724 0.         1.34177314]\n"
+     ]
     }
    ],
    "source": [
-    "compatible_reactions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "32fe51a0-279f-4353-8724-6ddb6b16e193",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 1),\n",
-       " (0, 2),\n",
-       " (1, 0),\n",
-       " (1, 1),\n",
-       " (2, 0),\n",
-       " (0, -1),\n",
-       " (1, -1),\n",
-       " (2, -1),\n",
-       " (0, -2),\n",
-       " (1, -2),\n",
-       " (2, -2),\n",
-       " (-1, 0),\n",
-       " (-1, 1),\n",
-       " (-1, 2),\n",
-       " (-1, -1),\n",
-       " (-2, 0),\n",
-       " (-2, 1),\n",
-       " (-2, 2)]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unique_changes"
+    "# Ensure the results directory exists\n",
+    "results_dir = \"../results/example2\"\n",
+    "os.makedirs(results_dir, exist_ok=True)\n",
+    "\n",
+    "## Debugging Parameters\n",
+    "runOnlyHigherDim        = False   # Only try to run cases that have >=2 variables\n",
+    "runOnlyOneHigherDimCase = False  # Only run one case with >=2 variables for debugging\n",
+    "\n",
+    "## MCMC parameters\n",
+    "NIterates = 500_000\n",
+    "Burnin    = 50_000\n",
+    "Thinout   = 100\n",
+    "\n",
+    "# Loop over all unique stoichiometric changes\n",
+    "for index, deltaX in enumerate(unique_changes):\n",
+    "    \n",
+    "    print(f\"\\nProcessing Index: {index}, Stoichiometric Change: {deltaX}\")\n",
+    "\n",
+    "    # Extract local data for this stoichiometric change\n",
+    "    (local_counts, local_waiting_times, local_propensities, selected_deltaX) = extract_local_data(\n",
+    "        jump_counts, waiting_times, propensities, unique_changes, \n",
+    "        index=index, deltaX=deltaX, verbose=True\n",
+    "    )\n",
+    "\n",
+    "    # Extract local true theta\n",
+    "    localTheta = trueTheta[compatible_reactions[selected_deltaX]]\n",
+    "    num_reactions = len(localTheta)\n",
+    "\n",
+    "    # Skip low-dimensional cases if debugging\n",
+    "    if num_reactions < 2 and runOnlyHigherDim:\n",
+    "        print(f\"🚫 Index {index} skipped: only {num_reactions} reaction(s) — needs at least 2 to run MCMC.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Compute 2-norm\n",
+    "    norm_theta = np.linalg.norm(localTheta, ord=2)\n",
+    "    print(f\"Local True Theta: {localTheta} (Norm: {norm_theta:.4f})\")\n",
+    "\n",
+    "    # Compute likelihood for true theta\n",
+    "    likeTrue = local_log_likelihood(local_counts, local_waiting_times, local_propensities, localTheta)\n",
+    "    print(f\"True Likelihood = {likeTrue}\")\n",
+    "\n",
+    "    total_count = sum(local_counts.values())\n",
+    "    print(f\"Total Count = {total_count}\")\n",
+    "\n",
+    "    # Initialize theta for MCMC\n",
+    "    a, b = 0.001, 2.0\n",
+    "    theta_init = np.random.uniform(a, b, size=localTheta.shape)\n",
+    "    likeInit = local_log_likelihood(local_counts, local_waiting_times, local_propensities, theta_init)\n",
+    "\n",
+    "    # Run adaptive MCMC only if norm is significant\n",
+    "    if norm_theta > 0.01:\n",
+    "        print(f\"Running Adaptive MCMC with spike-and-slab prior...\")\n",
+    "        \n",
+    "        filtered_reactions = [reaction_names[i] for i in compatible_reactions[selected_deltaX]]\n",
+    "        print(f\"Reaction Names = {filtered_reactions}\")\n",
+    "\n",
+    "        AdaptiveThetaChain = adaptive_mcmc_spike_slab(\n",
+    "            local_counts, local_waiting_times, local_propensities,\n",
+    "            theta_init, trueTheta, num_iterations=NIterates,\n",
+    "            alpha=2, beta=0.25, pi=0.75, burn_in=Burnin, adapt_every_n=10\n",
+    "        )\n",
+    "\n",
+    "        # Define filenames\n",
+    "        filenameKDE = os.path.join(results_dir, f\"AdaptiveMCMC_plot_Index_{index}_TotalCount_{total_count}_kde.png\")\n",
+    "        filenameChain = os.path.join(results_dir, f\"AdaptiveMCMC_plot_Index_{index}_TotalCount_{total_count}_chain.png\")\n",
+    "        filenamePosterior = os.path.join(results_dir, f\"AdaptiveMCMC_plot_Index_{index}_TotalCount_{total_count}_posterior.png\")\n",
+    "\n",
+    "        # Plotting\n",
+    "        plot_mcmc_samples(AdaptiveThetaChain, localTheta, epsilon=1e-5, burnin=Burnin, thinout=Thinout, filename=filenameKDE)\n",
+    "        plot_mcmc_chain(AdaptiveThetaChain, filename=filenameChain)\n",
+    "        if num_reactions >= 2:\n",
+    "            calc_network_posteriors(AdaptiveThetaChain, epsilon=1e-5, prob_cutoff=0.05, burnin=Burnin, thinout=Thinout)\n",
+    "            plot_network_and_parameter_posteriors(AdaptiveThetaChain, localTheta, epsilon=1e-5,\n",
+    "                                                 prob_cutoff=0.05, burnin=Burnin, thinout=Thinout, filename=filenamePosterior)\n",
+    "\n",
+    "        # Summary statistics to Excel\n",
+    "        chains = [AdaptiveThetaChain]\n",
+    "        labels = [\"Adaptive Spike & Slab\"]\n",
+    "        summarize_chains(chains, localTheta, labels,\n",
+    "                         results_dir=results_dir, filename=\"mcmc_summary.xlsx\",\n",
+    "                         burnin=Burnin, thinout=Thinout, alpha_ci=0.05, epsilon=1e-3,\n",
+    "                         run_index=index, count=total_count)\n",
+    "\n",
+    "        print(f\"MCMC completed for index {index}.\")\n",
+    "\n",
+    "        if (num_reactions > 1) and runOnlyOneHigherDimCase:\n",
+    "            break\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Skipping MCMC for index {index}: norm too small ({norm_theta:.4f}).\")\n",
+    "\n",
+    "    print(\"**********\")\n"
    ]
   },
   {
