--- a/examples/example1.ipynb
+++ b/examples/example1.ipynb
@@ -77,6 +77,7 @@
     "\n",
     "from src.parsing import *\n",
     "from src.inference import *\n",
+    "from src.mcmc import *\n",
     "from CRN_Simulation.CRN import CRN\n",
     "\n",
     "import numpy as np\n",
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "acd70c96-52ea-4265-ace9-13b7a80941c4",
    "metadata": {},
    "outputs": [
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "7c24c9c9-b725-4886-8bae-08b1df04ab61",
    "metadata": {},
    "outputs": [
@@ -378,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "977e7ee9-4c99-4706-9373-3d13d349895d",
    "metadata": {},
    "outputs": [
@@ -389,6 +390,7 @@
       "Extracting local data for stoichiometric change [1, -1] at index 6\n",
       "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
       "Local data extraction complete. 3 states processed.\n",
+      "Total observed jumps for this local stoichiometric change: 275\n",
       "Local True Theta = [1. 0. 0.]\n",
       "Log-Likelihood at True Theta = -136.02281916274433\n",
       "Maximum Log-Likelihood = -131.93926697939153\n",
@@ -436,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "4ac1e73e-8e69-4fe3-aad2-649a8912f8eb",
    "metadata": {},
    "outputs": [
@@ -447,6 +449,7 @@
       "Extracting local data for stoichiometric change [-1, 1] at index 12\n",
       "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
       "Local data extraction complete. 3 states processed.\n",
+      "Total observed jumps for this local stoichiometric change: 275\n",
       "Local True Theta = [0. 1. 2.]\n",
       "Log-Likelihood at True Theta = -136.02281916274433\n",
       "Maximum Log-Likelihood = -131.93926697939153\n",
@@ -496,6 +499,201 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e16f0dcf-5484-4e8f-a010-e88a003b8daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing Index: 0, Stoichiometric Change: (0, 1)\n",
+      "Extracting local data for stoichiometric change [0, 1] at index 0\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 0: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 1, Stoichiometric Change: (0, 2)\n",
+      "Extracting local data for stoichiometric change [0, 2] at index 1\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 1: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 2, Stoichiometric Change: (1, 0)\n",
+      "Extracting local data for stoichiometric change [1, 0] at index 2\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 2: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 3, Stoichiometric Change: (1, 1)\n",
+      "Extracting local data for stoichiometric change [1, 1] at index 3\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 3: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 4, Stoichiometric Change: (2, 0)\n",
+      "Extracting local data for stoichiometric change [2, 0] at index 4\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 4: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 5, Stoichiometric Change: (0, -1)\n",
+      "Extracting local data for stoichiometric change [0, -1] at index 5\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [0. 0. 0.] (Norm: 0.0000)\n",
+      "True Likelihood = 0.0\n",
+      "Total Count = 0\n",
+      "Skipping MCMC for index 5: norm too small (0.0000).\n",
+      "**********\n",
+      "\n",
+      "Processing Index: 6, Stoichiometric Change: (1, -1)\n",
+      "Extracting local data for stoichiometric change [1, -1] at index 6\n",
+      "✅ All states processed successfully — no empty propensities, consistent lengths, no negative counts, all waiting times valid.\n",
+      "Local data extraction complete. 3 states processed.\n",
+      "Local True Theta: [1. 0. 0.] (Norm: 1.0000)\n",
+      "True Likelihood = -136.02281916274433\n",
+      "Total Count = 275\n",
+      "Running Adaptive MCMC with spike-and-slab prior...\n",
+      "Reaction Names = ['X2_to_X1:', '2X2_to_X1+X2:', 'X1+X2_to_2X1:']\n",
+      "Iteration 10000: Accept Rate = 0.575, Theta = [0.         1.93071016 1.53460464]\n",
+      "Iteration 20000: Accept Rate = 0.525, Theta = [0.94883558 0.         0.9306697 ]\n",
+      "Iteration 30000: Accept Rate = 0.491, Theta = [0.99446353 0.         0.65327277]\n",
+      "Iteration 40000: Accept Rate = 0.472, Theta = [0.90702001 0.         0.66479685]\n",
+      "Iteration 50000: Accept Rate = 0.463, Theta = [0.85732496 0.         0.76203033]\n",
+      "Iteration 60000: Accept Rate = 0.389, Theta = [0.         1.65394075 1.55300412]\n",
+      "Iteration 70000: Accept Rate = 0.335, Theta = [0.         1.85079135 1.64883892]\n",
+      "Iteration 80000: Accept Rate = 0.294, Theta = [0.         1.50073219 1.9463095 ]\n",
+      "Iteration 90000: Accept Rate = 0.263, Theta = [0.         2.02454213 1.67067232]\n",
+      "Iteration 100000: Accept Rate = 0.238, Theta = [0.         1.89149962 1.68751291]\n",
+      "Iteration 110000: Accept Rate = 0.217, Theta = [0.         1.7459782  1.56885983]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ensure the results directory exists\n",
+    "results_dir = \"../results/example1/CRN1\"\n",
+    "os.makedirs(results_dir, exist_ok=True)\n",
+    "\n",
+    "## Debugging Parameters\n",
+    "runOnlyHigherDim        = False   # Only try to run cases that have >=2 variables\n",
+    "runOnlyOneHigherDimCase = False  # Only run one case with >=2 variables for debugging\n",
+    "\n",
+    "## MCMC parameters\n",
+    "NIterates = 500_000\n",
+    "Burnin    = 50_000\n",
+    "Thinout   = 100\n",
+    "\n",
+    "jump_counts    = jump_counts1\n",
+    "waiting_times  = waiting_times1\n",
+    "propensities   = propensities1\n",
+    "unique_changes = unique_changes1\n",
+    "trueTheta      = trueTheta1\n",
+    "\n",
+    "# Loop over all unique stoichiometric changes\n",
+    "for index, deltaX in enumerate(unique_changes):\n",
+    "    \n",
+    "    print(f\"\\nProcessing Index: {index}, Stoichiometric Change: {deltaX}\")\n",
+    "\n",
+    "    # Extract local data for this stoichiometric change\n",
+    "    (local_counts, local_waiting_times, local_propensities, selected_deltaX) = extract_local_data(\n",
+    "        jump_counts, waiting_times, propensities, unique_changes, \n",
+    "        index=index, deltaX=deltaX, verbose=True\n",
+    "    )\n",
+    "\n",
+    "    # Extract local true theta\n",
+    "    localTheta = trueTheta[compatible_reactions[selected_deltaX]]\n",
+    "    num_reactions = len(localTheta)\n",
+    "\n",
+    "    # Skip low-dimensional cases if debugging\n",
+    "    if num_reactions < 2 and runOnlyHigherDim:\n",
+    "        print(f\"🚫 Index {index} skipped: only {num_reactions} reaction(s) — needs at least 2 to run MCMC.\")\n",
+    "        continue\n",
+    "\n",
+    "    # Compute 2-norm\n",
+    "    norm_theta = np.linalg.norm(localTheta, ord=2)\n",
+    "    print(f\"Local True Theta: {localTheta} (Norm: {norm_theta:.4f})\")\n",
+    "\n",
+    "    # Compute likelihood for true theta\n",
+    "    likeTrue = local_log_likelihood(local_counts, local_waiting_times, local_propensities, localTheta)\n",
+    "    print(f\"True Likelihood = {likeTrue}\")\n",
+    "\n",
+    "    total_count = sum(local_counts.values())\n",
+    "    print(f\"Total Count = {total_count}\")\n",
+    "\n",
+    "    # Initialize theta for MCMC\n",
+    "    a, b = 0.001, 2.0\n",
+    "    theta_init = np.random.uniform(a, b, size=localTheta.shape)\n",
+    "    likeInit = local_log_likelihood(local_counts, local_waiting_times, local_propensities, theta_init)\n",
+    "\n",
+    "    # Run adaptive MCMC only if norm is significant\n",
+    "    if norm_theta > 0.01:\n",
+    "        print(f\"Running Adaptive MCMC with spike-and-slab prior...\")\n",
+    "        \n",
+    "        filtered_reactions = [reaction_names[i] for i in compatible_reactions[selected_deltaX]]\n",
+    "        print(f\"Reaction Names = {filtered_reactions}\")\n",
+    "\n",
+    "        AdaptiveThetaChain = adaptive_mcmc_spike_slab(\n",
+    "            local_counts, local_waiting_times, local_propensities,\n",
+    "            theta_init, trueTheta, num_iterations=NIterates,\n",
+    "            alpha=2, beta=0.25, pi=0.75, burn_in=Burnin, adapt_every_n=10\n",
+    "        )\n",
+    "\n",
+    "        # Define filenames\n",
+    "        filenameKDE = os.path.join(results_dir, f\"AdaptiveMCMC_plot_Index_{index}_TotalCount_{total_count}_kde.png\")\n",
+    "        filenameChain = os.path.join(results_dir, f\"AdaptiveMCMC_plot_Index_{index}_TotalCount_{total_count}_chain.png\")\n",
+    "        filenamePosterior = os.path.join(results_dir, f\"AdaptiveMCMC_plot_Index_{index}_TotalCount_{total_count}_posterior.png\")\n",
+    "\n",
+    "        # Plotting\n",
+    "        plot_mcmc_samples(AdaptiveThetaChain, localTheta, epsilon=1e-5, burnin=Burnin, thinout=Thinout, filename=filenameKDE)\n",
+    "        plot_mcmc_chain(AdaptiveThetaChain, filename=filenameChain)\n",
+    "        if num_reactions >= 2:\n",
+    "            calc_network_posteriors(AdaptiveThetaChain, epsilon=1e-5, prob_cutoff=0.05, burnin=Burnin, thinout=Thinout)\n",
+    "            plot_network_and_parameter_posteriors(AdaptiveThetaChain, localTheta, epsilon=1e-5,\n",
+    "                                                 prob_cutoff=0.05, burnin=Burnin, thinout=Thinout, filename=filenamePosterior)\n",
+    "\n",
+    "        # Summary statistics to Excel\n",
+    "        chains = [AdaptiveThetaChain]\n",
+    "        labels = [\"Adaptive Spike & Slab\"]\n",
+    "        summarize_chains(chains, localTheta, labels,\n",
+    "                         results_dir=results_dir, filename=\"mcmc_summary.xlsx\",\n",
+    "                         burnin=Burnin, thinout=Thinout, alpha_ci=0.05, epsilon=1e-3,\n",
+    "                         run_index=index, count=total_count)\n",
+    "\n",
+    "        print(f\"MCMC completed for index {index}.\")\n",
+    "\n",
+    "        if (num_reactions > 1) and runOnlyOneHigherDimCase:\n",
+    "            break\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Skipping MCMC for index {index}: norm too small ({norm_theta:.4f}).\")\n",
+    "\n",
+    "    print(\"**********\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd11bebc-c3bc-41b4-a724-4e485060b640",
    "metadata": {},
    "outputs": [],
    "source": []
